# pyproject-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.vars/: variables_nonsensitive.env  variables_sensitive_censored.env
docs/project_name/: index.html  main.html
docs/project_name/core/: index.html  settings.html  util.html
docs/project_name/logging/: index.html  logging_setup.html  settings.html
logging_stack/.grafana/: grafana.db
logging_stack/configs/: grafana-datasources.yaml  loki-config.yaml  promtail-config.yaml
project_name/: __init__.py  main.py
project_name/core/: settings.py  util.py
project_name/logging/: logging_setup.py  settings.py
project_name/project_logging/: __init__.py  logging_setup.py  settings.py
project_name/server/: __init__.py  server.py
project_name/server/server_logging/: __init__.py  logging_setup.py
tests/: test_utils.py
