[tool.poetry]
name = "project-name"
version = "0.0.1"
description = "Template for a Python project with logging, pre-commit, docs, tests set up"
authors = ["vitek <vitekzach@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project_name"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
better-exceptions = "^0.3.3"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
